k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-tracker
  namespace: task-tracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-tracker
  template:
    metadata:
      labels:
        app: task-tracker
    spec:
      containers:
      - name: app
        image: <ACCOUNT_ID>.dkr.ecr.eu-west-2.amazonaws.com/task-tracker:latest
        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
