k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-tracker
  namespace: task-tracker
spec:
  selector:
    app: task-tracker
  ports:
    - port: 80
      targetPort: 5000
